Algorithms improvment and chaining (#26)
* Improved the algos and linked with the WET parser

* added the user speccific file in the ignore part

* removed the user specific file

* fixed codacy issues hopefully

* Added some test data, added promises to the algo-calls

minor refactoring

* reduced filesize

* Moved the test file to test, as requested

PLEASE IGNORE THE COMMENTED CODE!
THIS FILE WILL BE DELETED LATER!
Just for the other group members, so that they can easy start stuff for
testing.
